--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 		<java.version>17</java.version>
 		<telegram.version>5.6.0</telegram.version>
 		<slf4j.version>2.0.11</slf4j.version>
+		<postgresql.version>42.7.1</postgresql.version>
+		<jpa.version>3.2.2</jpa.version>
 	</properties>
 	<dependencies>
 
@@ -24,7 +26,6 @@
 			<groupId>org.telegram</groupId>
 			<artifactId>telegrambots</artifactId>
 			<version>${telegram.version}</version>
-
 		</dependency>
 
 		<!-- Excluding commons-logging to prevent conflicts with the logging framework used in this project (Logback).
@@ -58,6 +59,23 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>${postgresql.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>${jpa.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
